isc_dhcp: Create initial structure

--- a/config/go.d.conf
+++ b/config/go.d.conf
@@ -32,6 +32,7 @@ modules:
 #  freeradius: yes
 #  hdfs: yes
 #  httpcheck: yes
+#  isc_dhcpd: yes
 #  k8s_kubelet: yes
 #  k8s_kubeproxy: yes
 #  lighttpd: yes
